--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
 TODO:
-- èaka, èi nás vyberú ;-)
-- poster - pridany navrh na zaklade loga, treba vytlacit, format A4
+- poster
+  - pridany navrh na zaklade loga, treba vytlacit, format A4
+  - ibae pod¾a Bielkovej mailu treba "plagat rozmeru A3, kde bude vas tim -- meno, cislo, tema a pripadne aj zoznam clenov s nejakym peknym obrazkom", take na tom posteri treba ešte asi zamaka
+- kadı by si mal zavies vlastnı projektovı denník
+- niekto by mal kontaktova Minárovú a dohodnú sa na náhradnom termíne stretnutia, lebo konzultácie oh¾adom projektu zaèínajú a od utorka
