1. Added some terrible english to section Introduction

--- a/doc/iitsrc/dokumentacia.tex
+++ b/doc/iitsrc/dokumentacia.tex
@@ -45,13 +45,19 @@ Information system for communication with graduates represents only one of many 
 
 \section{Introducing}
 
-Tento dokument poskytuje prehlad o projekte ALUMNI....
+Communication between graduates and university can be an advantage for boht sides. In this article we would shortly introduce web based software system called ALUMNI developed on Team project. 
 
-Naša FIIT má záujem vhodnou formou prezentovať verejnosti svojich absolventov. Zároveň by fakulta rada udržiavala s absolventmi neformálny odborný kontakt pomocou webu, a tiež by rada poskytla svojim absolventom rámec na neformálnu odbornú a spoločenskú komunikáciu medzi nimi navzájom. Zámerom projektu je vytvoriť informačný systém, ktorý bude plniť uvedené úlohy.
+Our faculty has ambitions to present graduates to public society. The faculty also wants to stay in touch with graduates using web application, providing a channel for profesional and social communication between graduates each other and faculty. 
 
-- dalsia motivacia, vyhody pre fakultu
+The focus of ALUMNI project is to design and implement a system that would accomplish this needs. 
 
-Absolvent FIIT STU je osoba, ktorá minimálne tri roky, prípadne viac, navštevovala túto fakultu. Počas tohto obdobia nadviazal absolvent množstvo sociálnych kontaktov so svojimi spolužiakmi a tiež so vyučujúcimi. Po ukončení sa tieto kontakty zvyčajne pretrhnú a len málokedy pokračujú ďalej. Predovšetkým tie s vyučujúcimi, všeobecne povedané absolvent stratí akékoľvek kontakty s fakultou. Táto skutočnosť však nie je v záujme fakulty a s veľkou pravdepodobnosťou k tomuto zisteniu dospeje aj absolvent vo svojom ďalšom živote. Tento trend, pretrhnutie kontaktov, je považovaný na fakulte za nežiadúci. Fakulta totiž vidí vo svojich absolventoch ľudí, s ktorými chce spolupracovať aj po ukončení štúdia, chce od nich získavať podnety a pripomienky, ktoré by premietla do svojho budúceho smerovania a do svojho zlepšovania. Ako najprijateľnejšiu formu kooperácie absolventov so fakultou sa z pohľadu fakulty javí spätná väzba a získavanie priamych informácii a názorov od absolventov. K naplneniu tejto vízie zo strany fakulty by mal prispieť aj navrhovaný systém na prezentáciu absolventov ALUMNI,
+Graduate FIIT STU is person, which has been studying for minimal three years or eventually more at this faculty. During this period the graduaed tied up a lot of social contact with classmates as well as with teachers. These contacts are typically cut off after graduating or the only rarely continue.
+
+Generally speaking, after the student leaves the university, he lost most of the contacts. This trend of breaking all contacts is not wanted by the faculty. The faculty sees the graduates as potential bussines partners with possibility to cooperated after study. Graduates are very good source of information and critics that could help inproove the quality of faculty. The best way to gain required information are feedback forms.
+
+%* dalsia motivacia, vyhody pre fakultu
+
+%Absolvent FIIT STU je osoba, ktorá minimálne tri roky, prípadne viac, navštevovala túto fakultu. Počas tohto obdobia nadviazal absolvent množstvo sociálnych kontaktov so svojimi spolužiakmi a tiež so vyučujúcimi. Po ukončení sa tieto kontakty zvyčajne pretrhnú a len málokedy pokračujú ďalej. Predovšetkým tie s vyučujúcimi, všeobecne povedané absolvent stratí akékoľvek kontakty s fakultou. Táto skutočnosť však nie je v záujme fakulty a s veľkou pravdepodobnosťou k tomuto zisteniu dospeje aj absolvent vo svojom ďalšom živote. Tento trend, pretrhnutie kontaktov, je považovaný na fakulte za nežiadúci. Fakulta totiž vidí vo svojich absolventoch ľudí, s ktorými chce spolupracovať aj po ukončení štúdia, chce od nich získavať podnety a pripomienky, ktoré by premietla do svojho budúceho smerovania a do svojho zlepšovania. Ako najprijateľnejšiu formu kooperácie absolventov so fakultou sa z pohľadu fakulty javí spätná väzba a získavanie priamych informácii a názorov od absolventov. K naplneniu tejto vízie zo strany fakulty by mal prispieť aj navrhovaný systém na prezentáciu absolventov ALUMNI,
 
 \section{Bussines goals}
 Ciele systému:
